syntax = "proto3";

//package exoscale.sos; // if we use this pkg, client-java will complain with "unknown service..."
option java_multiple_files = true;
option java_package = "exoscale.sos";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
